--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
 
 <p>These mostly represent the <em>absolute best</em> of what can currently be made to run and <em>is not</em> representative of most titles.</p>
 
-<p>
-  <img src="https://i.imgur.com/e95r0z8.png" alt="">
-  <img src="https://i.imgur.com/wRQBjCF.png" alt="">
-  <img src="https://i.imgur.com/K61IMhS.png" alt="">
-  <img src="https://i.imgur.com/Xdab9Wp.png" alt="">
-</p>
+<iframe class="imgur-album" width="100%" height="550" frameborder="0" src="https://imgur.com/a/FLNDx/embed"></iframe>
+
+<p></p>
+
+<h3>
+<a name="videos" class="anchor" href="#videos"><span class="octicon octicon-link"></span></a>Videos</h3>
+
+<p>Check out our <a href="https://www.youtube.com/channel/UC7bLgtgM8QCOgxZLb_JkA-Q">videos on YouTube</a>.</p>
+
       </section>
 
     </div>
